# example/swagger.yaml
@@ -1,25 +1,20 @@
 swagger: '2.0'
 info:
-  description: >
-    This is a simplifed version of the sample server Petstore server.
-    You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on
-    [irc.freenode.net, #swagger](http://swagger.io/irc/).
-    For this sample, you can use the api key `token` to test the authorization filters.
+  description: This is a simplified version of the sample server Petstore server.
   version: 1.0.0
-  title: Swagger Petstore
-host: petstore.org
+  title: Swagger Simple Petstore
+
+schemes: [http]
+host: localhost:5000
 basePath: /api
+consumes: [application/json]
+produces: [application/json]
+
 tags:
   - name: pet
     description: Everything about your Pets
   - name: store
     description: Access to Petstore orders
-schemes:
-  - http
-consumes:
-  - application/json
-produces:
-  - application/json
 
 securityDefinitions:
   token:
@@ -35,13 +30,12 @@ paths:
   /pets:
 
     post:
-      tags:
-        - pet
+      tags: [pet]
       summary: Add a new pet to the store
       operationId: PetCreate
       parameters:
         - in: body
-          name: body
+          name: pet
           description: Pet object that needs to be added to the store
           required: true
           schema:
@@ -56,35 +50,8 @@ paths:
       security:
         - token: [admin]
 
-    put:
-      tags:
-        - pet
-      summary: Update an existing pet
-      operationId: PetUpdate
-      parameters:
-        - in: body
-          name: body
-          description: Pet object that needs to be added to the store
-          required: true
-          schema:
-            $ref: '#/definitions/Pet'
-      responses:
-        201:
-          description: Updated successfully
-          schema:
-            $ref: '#/definitions/Pet'
-        400:
-          description: Invalid ID supplied
-        404:
-          description: Pet not found
-        405:
-          description: Validation exception
-      security:
-        - token: [admin]
-
     get:
-      tags:
-        - pet
+      tags: [pet]
       summary: List pets
       operationId: PetList
       parameters:
@@ -113,9 +80,40 @@ paths:
 
   /pets/{petId}:
 
+    put:
+      tags: [pet]
+      summary: Update an existing pet
+      operationId: PetUpdate
+      parameters:
+        - name: petId
+          in: path
+          description: ID of pet to return
+          required: true
+          type: integer
+          format: int64
+        - in: body
+          name: pet
+          description: Pet object that needs to be added to the store
+          required: true
+          schema:
+            $ref: '#/definitions/Pet'
+      responses:
+        201:
+          description: Updated successfully
+          schema:
+            $ref: '#/definitions/Pet'
+        400:
+          description: Invalid ID supplied
+        404:
+          description: Pet not found
+        405:
+          description: Validation exception
+      security:
+        - token: [admin]
+
+
     get:
-      tags:
-        - pet
+      tags: [pet]
       summary: Get pet by it's ID
       operationId: PetGet
 
@@ -137,8 +135,7 @@ paths:
           description: Pet not found
 
     delete:
-      tags:
-        - pet
+      tags: [pet]
       summary: Deletes a pet
       description: ''
       operationId: PetDelete
@@ -167,8 +164,7 @@ paths:
   /store/inventory:
 
     get:
-      tags:
-        - store
+      tags: [store]
       summary: Returns pet inventories by status
       operationId: InventoryGet
       responses:
@@ -183,14 +179,13 @@ paths:
   /store/order:
 
     post:
-      tags:
-        - store
+      tags: [store]
       summary: Place an order for a pet
       operationId: OrderCreate
 
       parameters:
         - in: body
-          name: body
+          name: order
           description: order placed for purchasing the pet
           required: true
           schema:
@@ -206,8 +201,7 @@ paths:
   /store/order/{orderId}:
 
     get:
-      tags:
-        - store
+      tags: [store]
       summary: Find purchase order by ID
       description: For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
       operationId: OrderGet
@@ -232,8 +226,7 @@ paths:
           description: Order not found
 
     delete:
-      tags:
-        - store
+      tags: [store]
       summary: Delete purchase order by ID
       description: For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
       operationId: OrderDelete
@@ -271,10 +264,6 @@ definitions:
         type: string
         example: doggie
         x-go-custom-tag: query:"filter,sort"
-      tags:
-        type: array
-        items:
-          $ref: '#/definitions/Tag'
       status:
         type: string
         description: pet status in the store
@@ -285,15 +274,6 @@ definitions:
         x-go-custom-tag: query:"filter,sort"
 
   Category:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      name:
-        type: string
-
-  Tag:
     type: object
     properties:
       id:
@@ -327,4 +307,3 @@ definitions:
       complete:
         type: boolean
         default: false
-
